--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/study/register1.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/study/register2.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/study/register3.jsp=UTF-8
