admin 컬럼명 변경

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kimsangwook</name>
+	<name>ILuvStudy_v1_0</name>
 	<comment></comment>
 	<projects>
 	</projects>
