--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>	
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>${org.aspectj-version}</version>
+		</dependency>
 		
 		<!-- Logging -->
 		<dependency>
@@ -207,6 +212,18 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.8.4</version>
+		</dependency>
+		
+			<!-- mail -->
+	 	<dependency>
+  		   <groupId>javax.mail</groupId>
+  		   <artifactId>mail</artifactId>
+  	   	   <version>1.4.3</version>
+	 	</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${org.springframework-version}</version>
 		</dependency>
 	
 		<!-- Test -->
