--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,5 +43,10 @@
     <filter-name>hiddenHttpMethodFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <!-- 방문자 수 카운트 -->
+	<listener>
+    	<listener-class>dev.mvc.util.VisitCounter</listener-class>
+	</listener>
 
 </web-app>
