--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,9 +44,11 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
-  <!-- 방문자 수 카운트 -->
-	<listener>
-    	<listener-class>dev.mvc.util.VisitCounter</listener-class>
-	</listener>
+  
+  <!-- 방문자 수 체크 -->
+   <listener>
+        <listener-class>dev.mvc.util.VisitSessionListener</listener-class>
+    </listener>
+
 
 </web-app>
