--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,26 @@
   			<artifactId>httpclient</artifactId>
   			<version>4.5.3</version>
 		</dependency>      
-	
+		<!-- 구글 로그인 end -->
+		
+		
+	<!-- 웹 소켓 -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+		<dependency>
+ 	 		<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-annotations</artifactId>
+  			<version>2.9.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+  			<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-core</artifactId>
+  			<version>2.8.9</version>
+		</dependency>
+
+	<!-- 웹 소켓 end -->
+
 	</dependencies>
     <build>
         <plugins>
