--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@
 		    <version>2.8.4</version>
 		</dependency>
 		
-			<!-- mail -->
+		<!-- mail -->
 	 	<dependency>
   		   <groupId>javax.mail</groupId>
   		   <artifactId>mail</artifactId>
@@ -245,7 +245,14 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>    
+		
+		<!-- AWS S3 라이브러리 -->
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk</artifactId>
+		    <version>1.11.301</version>
+		</dependency>    
 	</dependencies>
     <build>
         <plugins>
