--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,13 @@
   			<artifactId>jackson-core</artifactId>
   			<version>2.8.9</version>
 		</dependency>
+		
+		<!-- gson 라이브러리 추가, 객체를 json으로 만들어줌 -->
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.2.4</version>
+		</dependency>
 
 	<!-- 웹 소켓 end -->
 
