20180416 시큐리티 적용시, 관리자 로그인 불가

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
     /WEB-INF/spring/root-context.xml
-    /WEB-INF/spring/spring-security.xml
+    /WEB-INF/spring/spring-security.xml <!-- 스프링 시큐리티  -->
     </param-value>
   </context-param>
   <listener>
